@@ -1,5 +1,7 @@
 ﻿; To use this file, rename it to luamacro.ini
 
+[General]
+
 ; MacroPath
 ; Defines paths from which macrofiles are loaded.
 ; It is a sequence of 0 or more paths separated with semicolons.
